updated mobile view

--- a/fullblog/5-Reasons-to-choose-Yoga-over-Gym.html
+++ b/fullblog/5-Reasons-to-choose-Yoga-over-Gym.html
@@ -536,8 +536,8 @@
       <!-- modal for booking session ends here -->
 
     <div class="blogTitle">
-      <p class="date text-center">04th April 2021</p>
-      <p class="blog-heading text-center">5 reasons to choose Yoga over Gym</p>
+      <p class="date"><span>Publised</span><span>.</span> 04th April 2021</p>
+      <p class="blog-heading">5 reasons to choose Yoga over Gym</p>
       <p class="subText text-center">Yoga is fun if done!</p>
       <!-- <div class="socialMedia">
         <a href="https://www.linkedin.com/company/healthhighway/" target="_blank" ><i class="fa fa-linkedin fa-2x" style="color: #0e76a8 ;" aria-hidden="true"></i></a>
