--- a/fullblog/Menopause.html
+++ b/fullblog/Menopause.html
@@ -535,8 +535,8 @@
       <!-- modal for booking session ends here -->
 
     <div class="blogTitle">
-      <p class="date text-center">28th JUNE 2021</p>
-      <p class="blog-heading text-center">Menopause</p>
+      <p class="date"><span>Publised</span><span>.</span>28th JUNE 2021</p>
+      <p class="blog-heading">Menopause</p>
       <!-- <p class="subText text-center">Yoga: A Journey from Pain to Gain</p> -->
       <!-- <div class="socialMedia">
         <a href="https://www.linkedin.com/company/healthhighway/" target="_blank" ><i class="fa fa-linkedin fa-2x" style="color: #0e76a8 ;" aria-hidden="true"></i></a>
