--- a/fullblog/Yoga-day-at-Ryan-International.html
+++ b/fullblog/Yoga-day-at-Ryan-International.html
@@ -535,8 +535,8 @@
       <!-- modal for booking session ends here -->
 
     <div class="blogTitle">
-      <p class="date">22nd JUNE 2021</p>
-      <p class="blog-heading text-center">Yoga day at Ryan International</p>
+      <p class="date"><span>Publised</span><span>.</span>22nd JUNE 2021</p>
+      <p class="blog-heading ">Yoga day at Ryan International</p>
       <!-- <div class="socialMedia">
         <a href="https://www.linkedin.com/company/healthhighway/" target="_blank" ><i class="fa fa-linkedin fa-2x" style="color: #0e76a8 ;" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/healthhighwayin/" target="_blank" ><i class="fa fa-instagram fa-2x" style="color: #fb3958;"></i></a>
