--- a/fullblog/Yoga-for-back-pain.html
+++ b/fullblog/Yoga-for-back-pain.html
@@ -536,8 +536,8 @@
       <!-- modal for booking session ends here -->
 
     <div class="blogTitle">
-      <p class="date text-center">17th MAY 2021</p>
-      <p class="blog-heading text-center">Yoga for Back Pain</p>
+      <p class="date"><span>Publised</span><span>.</span>17th MAY 2021</p>
+      <p class="blog-heading">Yoga for Back Pain</p>
       <p class="subText text-center">Choose Gain over your Back Pain!</p>
       <!-- <div class="socialMedia">
         <a href="https://www.linkedin.com/company/healthhighway/" target="_blank" ><i class="fa fa-linkedin fa-2x" style="color: #0e76a8 ;" aria-hidden="true"></i></a>
