--- a/fullblog/international-yoga-day.html
+++ b/fullblog/international-yoga-day.html
@@ -537,8 +537,8 @@
       <!-- modal for booking session ends here -->
 
     <div class="blogTitle">
-      <p class="date text-center">21st JUNE 2021</p>
-      <p class="blog-heading text-center">International Yoga Day</p>
+      <p class="date"><span>Publised</span><span>.</span> 21st JUNE 2021</p>
+      <p class="blog-heading">International Yoga Day</p>
       <p class="subText text-center">Yoga: A Journey from Pain to Gain</p>
       <!-- <div class="socialMedia">
         <a href="https://www.linkedin.com/company/healthhighway/" target="_blank" ><i class="fa fa-linkedin fa-2x" style="color: #0e76a8 ;" aria-hidden="true"></i></a>
@@ -547,7 +547,7 @@
       </div> -->
     </div>
     
-    <div class="blog-main-image" style="background-image: url('/images/intyoga-3.png')"></div>
+    <div class="blog-main-image" style="background-image: url('./images/intyoga-3.png')"></div>
     <div class="blog-img_avatar">
         <img src="https://cdn.pixabay.com/photo/2016/03/26/20/35/young-man-1281282_960_720.jpg" alt="Avatar">
         <p><span>Lusis Monteiro</span> Design Director</p>
@@ -556,7 +556,7 @@
         <p style="font-style: italic;" >“Yoga does not make your life better. It makes you better at life.”</p>
         <p><span style="font-size:46px;" >T</span>hat pretty much sums up the purpose of Yoga in our life. One starts the journey of Yoga with pain, and then eventually ends up gaining strength, flexibility and stillness. Yoga helps the restless soul come to peace and brings back calm and mindfulness to one's busy life. </p>
         <p>Today everyone is celebrating 7th International Yoga Day across different cultures and locations in the entire world to reconnect with their inner self and be at peace with the mind and the body. To keep up with a fast-paced life and make our future better, we forget to stay in the present and take care of our health. So, this Yoga Day, let's come up with a resolution of not compromising our health, kyuki jaan hai toh jahaan hai.</p>
-        <div class="blog-main-image" style="background-image: url('/images/intyoga-2.png')"></div>
+        <div class="blog-main-image" style="background-image: url('./images/intyoga-2.png')"></div>
         <p style="font-weight: bold;" >What is Yoga and Why do we celebrate it?</p>
         <p>Yoga is a physical and spiritual activity that originated in India. The word ‘Yoga’ derives from Sanskrit which means to unite i.e., the unison of mind and body. It helps in maintaining the overall development of one’s physical as well as mental well-being. The idea to celebrate Yoga annually was presented by the current Prime Minister of India, Narendra Modi, in his UN address in 2014. The celebration aims to raise awareness about the health benefits of practicing Yoga across the globe. </p><br>
         <p>To recognize how Yoga plays an important role in our daily lives, this year’s theme for International Yoga Day by UN is <span style="font-style: italic" >Yoga for well-being.</span></p><br>
