--- a/fullblog/5-Reasons-For-Children-To-Follow-Yoga.html
+++ b/fullblog/5-Reasons-For-Children-To-Follow-Yoga.html
@@ -536,8 +536,8 @@
       <!-- modal for booking session ends here -->
 
     <div class="blogTitle">
-      <p class="date text-center">25th JUNE 2021</p>
-      <p class="blog-heading text-center">5 Reasons For Children To Follow Yoga</p>
+      <p class="date "><span>Publised</span><span>.</span> 25th JUNE 2021</p>
+      <p class="blog-heading ">5 Reasons For Children To Follow Yoga</p>
       <!-- <p class="subText text-center">Yoga: A Journey from Pain to Gain</p> -->
       <!-- <div class="socialMedia">
         <a href="https://www.linkedin.com/company/healthhighway/" target="_blank" ><i class="fa fa-linkedin fa-2x" style="color: #0e76a8 ;" aria-hidden="true"></i></a>
